src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/GLUtil_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLUtil_StringErrorContext.class */
public final class GLUtil_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("setupDebugMessageCallback()Lorg/lwjgl/system/Callback;", "net/labymod/core/laby3d/opengl/error/generated/GLUtilErrorContext");
        methods.put("setupDebugMessageCallback(Ljava/io/PrintStream;)Lorg/lwjgl/system/Callback;", "net/labymod/core/laby3d/opengl/error/generated/GLUtilErrorContext");
        return methods;
    }
}
